Bugfixes #1
- Fixed setting button clipping if difficulty name is too long.
- Fixed "Reduced Debris" preventing score from updating.
- Overal "No effects" improvements.

--- a/src/index.styl
+++ b/src/index.styl
@@ -54,7 +54,7 @@ html
   
   #controlsSettings
     cursor pointer
-    padding 3px 10px 0 3px
+    padding 3px 10px 0 14px
     img
       height 20px
       width 20px
@@ -185,6 +185,12 @@ html
     padding 5px 10px
     text-align center
     transition all .1s
+    max-width: 100px
+    max-height: 28px
+    overflow: hidden
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
     p
       font-family $font
 
